2001-10-19  Alex Samuel  <samuel@codesourcery.com>

	* doc/manual/test-manual.xml (sec-specifying-test-class): Update.

2001-10-19  Alex Samuel  <samuel@codesourcery.com>

	* qm/test/base.py (_get_db_configuration_directory): Rename to...
	(get_db_configuration_directory): ... this.
	Update accordingly throughout.
	* qm/test/database.py (Database.GetClassPaths): Rewrite.
	* qm/test/xmldb.py (Database.GetClassPaths): Use base class
	implementation. 

2001-10-19  Alex Samuel  <samuel@codesourcery.com>

	* qm/xmlutil.py (load_xml_file): Don't handle exceptions here.
	* qm/web.py (WebRequestHandler.do_POST): Expand fields here.
	(WebRequestHandler.__HandleXmlRpcRequest): Dump exception if
	verbose. 
	(parse_form_query): Remove.
	* qm/structured_text.py (StructuredTextProcessor.NormalizeSpaces):
	Remove FIXME.  Expand tabs.
	(__entity_char_regex): Remove FIXME.
	* qm/platform.py (open_in_browser): Remove.
	* qm/platform_win32.py (open_in_browser): Remove.
	* qm/platform_unix.py (get_user_name): Reimplement.
	* qm/fields.py (Field.MakePropertyControls): Remove FIXME.
	(TextField.CompareValues): Likewise.
	* qm/common.py (RcConfiguration): Remove FIXME.
	(format_traceback): Likewise.
	(find_program_in_path): Use os.pathsep.  Use is_executable.
	(is_executable): Rewrite.
	(split_argument_list): Remove FIXME.
	(parse_time): Change FIXME to note.
	* qm/track/server.py (_script_base): Remove FIXME.
	* qm/track/issue_database.py (open): Remove FIXMEs.
	* qm/track/cmdline.py (Command.__PerformCreate): Remove FIXME.
	(Command.__PerformCreateIdb): Likewise.
	(Command.__ImportIssues): Likewise.
	* qm/track/web/query.py (QueryPage.MakePythonQueryHelp): Remove
	FIXME. 
	(QueryPage.MakeCategorySelect): Likewise.
	(QueryPage.MakeStateSelect): Likewise.
	* qm/track/web/issue_class.py: Remove FIXME.
	(handle_submit_class): Remove FIXME.  Don't try to handle new
	issue classes here.
	* qm/track/triggers/notification.py
	(NotifyFixedTrigger.GetSubscriberAddresses): Remove FIXME.